--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -7,40 +7,57 @@
 			rel="stylesheet"
 			href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
 		<meta name="csrf-token" content="{{ csrf_token() }}" />
+		<link
+			rel="stylesheet"
+			href="{{ url_for('static', filename='css/style.css') }}" />
+
 		<!-- CSRF Token -->
 		<title>Register</title>
 	</head>
 	<body class="bg-light">
-		<div class="container mt-5">
-			<h2 class="text-center">Register</h2>
-			<form action="/register_user" method="POST">
-				<input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
-				<!-- CSRF token -->
-				<div class="form-group">
-					<label for="email">Email:</label>
-					<input
-						type="email"
-						class="form-control"
-						id="email"
-						name="email"
-						required />
+		<div class="container mt-5 d-flex justify-content-center">
+			<div class="card shadow">
+				<div class="card-body">
+					<h2 class="text-center">Register</h2>
+					<form action="/register_user" method="POST">
+						<input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+						<!-- CSRF token -->
+						<div class="form-group">
+							<label for="email">Email:</label>
+							<input
+								type="email"
+								class="form-control"
+								id="email"
+								name="email"
+								required />
+						</div>
+						<div class="form-group">
+							<label for="username">Username:</label>
+							<input
+								type="text"
+								class="form-control"
+								id="username"
+								name="username"
+								required />
+						</div>
+						<div class="form-group">
+							<label for="password">Password:</label>
+							<input
+								type="password"
+								class="form-control"
+								id="password"
+								name="password"
+								required />
+						</div>
+						<button type="submit" class="btn btn-primary btn-block">
+							Register
+						</button>
+					</form>
+					<p class="mt-3 text-center">
+						Already have an account? <a href="/">Login here</a>.
+					</p>
 				</div>
-				<div class="form-group">
-					<label for="password">Password:</label>
-					<input
-						type="password"
-						class="form-control"
-						id="password"
-						name="password"
-						required />
-				</div>
-				<button type="submit" class="btn btn-primary btn-block">
-					Register
-				</button>
-			</form>
-			<p class="mt-3 text-center">
-				Already have an account? <a href="/">Login here</a>.
-			</p>
+			</div>
 		</div>
 	</body>
 </html>
