--- a/app/templates/student/index.html
+++ b/app/templates/student/index.html
@@ -3,7 +3,56 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Students</title>
+		<title>SSIS</title>
+		<link
+			href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css"
+			rel="stylesheet" />
+		<link
+			href="{{url_for('static', filename='css/navbar.css')}}"
+			rel="stylesheet" />
 	</head>
-	<body></body>
+	<body class="bg-light">
+		<nav class="navbar navbar-expand-lg card-navbar">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="#">SSIS</a>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarNav">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<!-- Left Side Navigation -->
+					<ul class="navbar-nav me-auto">
+						<li class="nav-item">
+							<a class="nav-link active" href="#">Students</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Programs</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Courses</a>
+						</li>
+					</ul>
+
+					<!-- Right Side Profile Section -->
+					<div class="profile-section">
+						<div class="profile-name">John Doe</div>
+						<a href="{{ url_for('user.logout') }}" class="logout-btn">
+							Logout
+						</a>
+					</div>
+				</div>
+			</div>
+		</nav>
+
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
+		<script>
+			function handleLogout() {
+				// Add your logout logic here
+				console.log("Logout clicked");
+			}
+		</script>
+	</body>
 </html>
