Added student page (create and read only, WIP: update and delete)

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -6,7 +6,13 @@ body {
 	border-radius: 15px;
 	width: 400px;
 }
-
+.card-custom {
+	background: white;
+	box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+		0 2px 4px -1px rgba(0, 0, 0, 0.06);
+	border-radius: 12px;
+	margin: 20px;
+}
 .card-body {
 	padding: 30px;
 }
