--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -41,6 +41,10 @@
 							<div class="text-danger">{{ form.password.errors[0] }}</div>
 							{% endif %}
 						</div>
+						<div class="form-group">
+							{{ form.remember_me(class="form-check-input") }} {{
+							form.remember_me.label}}
+						</div>
 
 						<button type="submit" class="btn btn-primary btn-block">
 							Login
