--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -19,7 +19,7 @@
 			<div class="card shadow">
 				<div class="card-body">
 					<h2 class="text-center">Register</h2>
-					<form action="/register_user" method="POST">
+					<form action="/register" method="POST">
 						<input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
 						<!-- CSRF token -->
 						<div class="form-group">
