--- a/app/templates/college/index.html
+++ b/app/templates/college/index.html
@@ -56,7 +56,7 @@
 						<button
 							class="btn btn-primary"
 							data-bs-toggle="modal"
-							data-bs-target="#addStudentModal">
+							data-bs-target="#addCollegeModal">
 							<i class="fas fa-plus"></i> Add College
 						</button>
 					</div>
@@ -66,10 +66,8 @@
 							<thead>
 								<tr>
 									<th scope="col">ID</th>
-									<th scope="col">Course Code</th>
 									<th scope="col">Name</th>
-									<th scope="col">College</th>
-									<th scope="col">Action</th>
+									<th scope="col">Actions</th>
 								</tr>
 							</thead>
 							<tbody>
@@ -77,8 +75,7 @@
 								<tr>
 									<td>{{ college[0] }}</td>
 									<td>{{ college[1] }}</td>
-									<td>{{ college[2] }}</td>
-									<td>{{ college[3] }}</td>
+
 									<td>
 										<button
 											class="btn btn-warning btn-edit"
@@ -99,8 +96,94 @@
 				</div>
 			</div>
 		</div>
-
+		<div
+			class="modal fade"
+			id="addCollegeModal"
+			tabindex="-1"
+			aria-labelledby="addCollegeModalLabel"
+			aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="addCollegeModalLabel">Add College</h5>
+						<button
+							type="button"
+							class="btn-close"
+							data-bs-dismiss="modal"
+							aria-label="Close"></button>
+					</div>
+					<div class="modal-body">
+						<form id="addCollegeForm">
+							{{ collegeForm.hidden_tag() }}
+							<div class="mb-3">
+								{{ collegeForm.name.label(class="form-label") }} {{
+								collegeForm.name(class="form-control", id="name", required=True)
+								}}
+							</div>
+						</form>
+						<div class="error alert alert-danger d-none"></div>
+						<!-- Hide error message initially -->
+					</div>
+					<div class="modal-footer">
+						<button
+							type="button"
+							class="btn btn-secondary"
+							data-bs-dismiss="modal">
+							Close
+						</button>
+						<button type="button" class="btn btn-primary" id="submitAddCollege">
+							Add College
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div
+			class="modal fade"
+			id="editCollegeModal"
+			tabindex="-1"
+			aria-labelledby="editCollegeModalLabel"
+			aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="editCollegeModalLabel">Edit College</h5>
+						<button
+							type="button"
+							class="btn-close"
+							data-bs-dismiss="modal"
+							aria-label="Close"></button>
+					</div>
+					<div class="modal-body">
+						<form id="editCollegeForm">
+							{{ collegeForm.hidden_tag() }}
+							<input type="hidden" id="editCollegeId" />
+							<div class="mb-3">
+								{{ collegeForm.name.label(class="form-label") }} {{
+								collegeForm.name(class="form-control", id="editCollegeName",
+								required=True) }}
+							</div>
+						</form>
+						<div class="error alert alert-danger d-none"></div>
+					</div>
+					<div class="modal-footer">
+						<button
+							type="button"
+							class="btn btn-secondary"
+							data-bs-dismiss="modal">
+							Close
+						</button>
+						<button
+							type="button"
+							class="btn btn-primary"
+							id="submitEditCollege">
+							Save Changes
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
-		<script src="{{url_for('static', filename='js/student.js')}}"></script>
+		<script src="{{url_for('static', filename='js/college.js')}}"></script>
 	</body>
 </html>
