--- a/app/templates/college/index.html
+++ b/app/templates/college/index.html
@@ -39,9 +39,8 @@
 						</li>
 					</ul>
 
-					<!-- Right Side Profile Section -->
 					<div class="profile-section">
-						<div class="profile-name">John Doe</div>
+						<div class="profile-name">{{ user_display_name() }}</div>
 						<a href="{{ url_for('user.logout') }}" class="logout-btn">Logout</a>
 					</div>
 				</div>
