--- a/app/templates/program/index.html
+++ b/app/templates/program/index.html
@@ -59,9 +59,19 @@
 							<i class="fas fa-plus"></i> Add Program
 						</button>
 					</div>
-
+					<div class="search-container">
+						<i class="fas fa-search search-icon"></i>
+						<select id="programSearchFilter" class="search-filter">
+							<option value="all">Search All</option>
+						</select>
+						<input
+							type="text"
+							id="programSearch"
+							class="search-input"
+							placeholder="Search programs..." />
+					</div>
 					<div class="row mt-2">
-						<table class="table">
+						<table class="table" id="programTable">
 							<thead>
 								<tr>
 									<th scope="col">ID</th>
@@ -205,7 +215,25 @@
 				</div>
 			</div>
 		</div>
+
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
 		<script src="{{url_for('static', filename='js/program.js')}}"></script>
+		<script
+			src="https://kit.fontawesome.com/c064d25bcd.js"
+			crossorigin="anonymous"></script>
+		<script src="{{url_for('static', filename='js/livesearch.js')}}"></script>
+		<script>
+			document.addEventListener("DOMContentLoaded", function () {
+				setupLiveSearch(
+					"programTable",
+					"programSearch",
+					"programSearchFilter",
+					[
+						{ value: "code", label: "Search by Course Code" },
+						{ value: "courseName", label: "Search by Course Name" },
+					]
+				);
+			});
+		</script>
 	</body>
 </html>
